Really Really Simple Guessing Game Page. Does Nothing

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
+<!doctype html>
 <html>
 	<head>
 		<link type = "text/css" rel = "stylesheet" href = "main.css">
+		<title>Emily's Guessing Game</title>
 	</head>
 	<body>
-		
+		<div class = "header">
+			<p class = "prompt"><h1>Enter A Number Between 1 - 100:</h1></p>
+		</div>
+		<div class = "form">
+			<form>
+				 Your Guess:
+				<input type="text" name = "input">
+				<div class = "form-buttons">
+					<button type = "button">Give Up</button>
+					<button type = "button">Check</button>
+				</div>
+			</form>
+		</div>
 	</body>
 </html>
