Re added an id to the submit button. Clicking the submit button now works

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<input type="text" name = "input">
 				<div class = "form-buttons">
 					<button type = "button" id = 'hint-button'>Hint</button>
-					<button type = "button">Submit Guess</button>
+					<button type = "button" id = 'submit-button'>Submit Guess</button>
                <button type = "button" id = 'again-button'>Play Again?</button>
 				</div>
 			</form>
